add analysis, upload, home

--- a/lava/base/【监控】板块-测试驾驶舱.md
+++ b/lava/base/【监控】板块-测试驾驶舱.md
@@ -1,4 +1,4 @@
-# 1.【监控】板块 - 测试驾驶舱
+# 1 【监控】板块 - 测试驾驶舱
 
 
 💡业务描述：用户进入此模块，可以进行站别【测试指标】的监控。
@@ -26,35 +26,45 @@
 ### 1.1.1 指标介绍
 
 - 产出/投入（Ouput/Input）：
-    - 产出：Log上抛结果为TA站别且为结果为PASS的条件下，计算SN数量
-    - 投入：Log上抛结果为TA站别的条件下，计算SN数量
+```
+产出 = Log上抛结果为TA站别且为结果为PASS的条件下，计算SN数量
+投入 = Log上抛结果为TA站别的条件下，计算SN数量
+```
 
 ![Untitled](monitor/Untitled_2.png)
 
 - 良率（YR）：
-    - 良率：Log上抛结果为TA，计算1- (Fail Qty/Input Qty)
+```
+良率 = Log上抛结果为TA，计算1- (Fail Qty/Input Qty)
+```
 
 ![Untitled](monitor/Untitled_3.png)
 
 - 重试率（Retry Rate）：
-    - Retry Rate：Log上抛结果为TA，计算(Retry次数-Fail的Retry次数)/Input数量[(Retest+pass+ng)-(ng的Retest)]
+```
+Retry Rate = Log上抛结果为TA，计算(Retry次数-Fail的Retry次数)/Input数量[(Retest+pass+ng)-(ng的Retest)]
+```
 
 ![Untitled](monitor/Untitled_4.png)
 
 - 重测率（Retest Rate）：
-    - Retest Rate：Log上抛结果为TA，计算Retest次數/ Input数量(Retest+Pass+Fail)
+```
+Retest Rate = Log上抛结果为TA，计算Retest次數/ Input数量(Retest+Pass+Fail)
+```
 
 ![Untitled](monitor/Untitled_5.png)
 
 - 机台利用率（Equip. Utility Rate）：
-    - Utility Rate：上传中心维护的机台资讯，计算数量得出。
+```
+Utility Rate = 上传中心维护的机台资讯，计算数量得出。
+```
 
 ![Untitled](monitor/Untitled_6.png)
 
 ### 1.1.2 趋势图显示
 
 趋势图时间从当天早上8点到隔天早上8点，记录24小时白晚班的指标。
-例如：8点的数值是计算从08:00:00-08:59:59合计。
+例如：8点的数值是计算从08 : 00 : 00-08 : 59 : 59合计。
 
 ![Untitled](monitor/Untitled_7.png)
 
